# kelvatech-telegram-events-parser

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  channels.yaml  channels.yaml.example  docker-compose.yml  langgraph.json  pyproject.toml
docs/: DEPLOY.md  MANUAL.md  PRD.md
docs/adr/: 0001-weekly-cron-weekday-named-day.md  0002-seen-store-single-connection-across-threads.md  0003-use-agents-resolved-in-config-with-per-caller-default.md  0004-fetch-seam-reports-channel-health.md  0005-one-guarded-run-entry-alerting-scheduled-only.md  0006-weekly-fire-survives-misfire-alert-extends-to-scheduler.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/issues/: S01-walking-skeleton.md  S02-preview-client.md  S03-event-extraction.md  S04-rules-classify-horizon-rank.md  S05-seen-store-dedup.md  S06-ru-digest-renderer.md  S07-telegram-delivery.md  S08-deep-agents-supervisor-subagents.md  S09-hybrid-triggers.md  S10-channel-research-config.md  S11-live-end-to-end.md  S13-business-legal-domains.md
prototypes/: NOTES.md  proto_tme_preview.py
scripts/: tdata_to_session.py  telethon_login.py
src/events_parser/: __init__.py  __main__.py  agents.py  app.py  config.py  extraction.py  factory.py  models.py  notify.py  orchestrator.py  preview.py  render.py  rules.py  runner.py  schedule.py  (+2 more)
tests/: test_agents.py  test_app.py  test_config.py  test_extraction.py  test_factory.py  test_notify.py  test_orchestrator.py  test_preview.py  test_render.py  test_rules.py  test_runner.py  test_schedule.py  test_seen_store.py  test_telethon.py
(+3 files in other folders)
