[project]
name = "events-parser"
version = "0.1.0"
description = "Kelva Telegram Events Parser — weekly RU AI/PR event digest via LangChain Deep Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy runtime deps pulled in by later slices (agents, delivery, scheduling, host).
# Kept optional so the unit suite stays fast and dependency-light.
runtime = [
    "deepagents>=0.5.0",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langsmith>=0.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "apscheduler>=3.10",
    "python-telegram-bot>=21.0",
    "telethon>=1.36",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/events_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.uv]
package = true
